# ImOS_Tab5

./: .gitignore  AUDIO_HAL_MODIFICATIONS.md  README.md  README_APP_MANAGER.md  README_AUDIO_HAL.md  README_AUDIO_LOOPBACK_APP.md  partitions.csv  sdkconfig  sdkconfig.defaults  sdkconfig.old
main/: CMakeLists.txt  app_ark.c  app_ark.h  app_audio_loopback.c  app_audio_loopback.h  app_file_manager.c  app_file_manager.h  app_launcher.c  app_launcher.h  app_manager.c  app_manager.h  app_music_player.c  app_music_player.h  app_photo.c  app_photo_images.c  app_pwm_servo.c  app_pwm_servo.h  app_settings.c  app_settings.h  app_test.c  app_test.h  audio_example.c  audio_loopback_test.c  content_lock.c  content_lock.h  gesture_handler.c  gui.c  hal.c  hal.h  hal_audio.c  hal_audio.h  hal_display.c  hal_display.h  hal_pwm.c  hal_sdcard.h  idf_component.yml  lvdemomenu.h  m5stack-tab5-lvgl.c  menu_utils.c  menu_utils.h  (+15 more)
main/apps/ark/: app_ark.c  app_ark.h
main/apps/file_manager/: app_file_manager.c
main/apps/launcher/: app_launcher.c  app_launcher.h
main/apps/music_player/: app_music_player.c  app_music_player.h
main/apps/photo/: app_photo.c  app_photo.h  app_photo_images.c
main/apps/pwm_servo/: app_pwm_servo.c  app_pwm_servo.h
main/apps/settings/: app_settings.c  app_settings.h  settings_about.c  settings_about.h  settings_common.h  settings_display.c  settings_display.h  settings_sound.c  settings_sound.h
main/assets/: bg.c  picture5.c  scenery1.c  simhei_32.c
main/hal/: hal_audio.h  hal_pwm.h  hal_sdcard.c
main/managers/: app_manager.c  content_lock.c  gesture_handler.c  gesture_handler.h  nvs_manager.c  nvs_manager.h
main/utils/: memory_utils.c  memory_utils.h
