idf_component_register(SRCS "app_photo_images.c" 
                            "app_photo.c"
                            "app_pwm_servo.c" 
                            "hal_pwm.c" 
                            "menu_utils.c" 
                            "gesture_handler.c" 
                            "app_ark.c"
                            "app_settings.c" 
                            "app_manager.c" 
                            "app_launcher.c" 
                            "overlay_drawer.c" 
                            "app_manager.c" 
                            "m5stack-tab5-lvgl.c"
                            "gui.c"
                            "hal.c"
                            "hal_audio.c"
                            "hal_display.c"
                            "hal_sdcard.c"
                            "app_music_player.c"
                            "app_file_manager.c"
                            "nvs_manager.c"
                            "content_lock.c"
                    INCLUDE_DIRS ".")
