idf_component_register(SRCS 
                            "apps/photo/app_photo_images.c" 
                            "apps/photo/app_photo.c"
                            "apps/pwm_servo/app_pwm_servo.c" 
                            "hal/hal_pwm.c" 
                            "utils/menu_utils.c" 
                            "utils/memory_utils.c"
                            "managers/gesture_handler.c" 
                            "apps/ark/app_ark.c"
                            "apps/settings/app_settings.c"
                            "apps/settings/settings_about.c"
                            "apps/settings/settings_display.c"
                            "apps/settings/settings_sound.c"
                            "managers/app_manager.c" 
                            "apps/launcher/app_launcher.c" 
                            "overlay_drawer.c" 
                            "m5stack-tab5-lvgl.c"
                            "gui.c"
                            "hal.c"
                            "hal/hal_audio.c"
                            "hal/hal_display.c"
                            "hal/hal_sdcard.c"
                            "apps/music_player/app_music_player.c"
                            "apps/file_manager/app_file_manager.c"
                            "managers/nvs_manager.c"
                            "managers/content_lock.c"
                            "assets/bg.c"
                            "assets/image1.c"
                            "assets/scenery1.c"
                            "assets/simhei_32.c"
                       INCLUDE_DIRS ".")
